# mitsuba_plugins

./: .gitignore  CMakeLists.txt  README.md
bsdfs/: CMakeLists.txt  velvetcoating.cpp  wardaniso.cpp  zmask.cpp
shapes/: CMakeLists.txt  alembic.cpp  subd.cpp  threadPool.h  threadsafeMap.h
textures/: CMakeLists.txt  adjust.cpp  bitmapudim.cpp  blend.cpp  checker.cpp  colorramp.cpp  combine.cpp  hsv.h  oiio_texture.cpp  osl.cpp  simplerend.cpp  simplerend.h  variation.cpp
